# spt

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  azure-pipelines.yml  docker-compose.external-jena.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  app.py  context_scope.py  page_context.py
docker/: README.md
mappings/: README.md
rdf/: README.md
scripts/: advisory.sh  agent-memory.sh  agent-observability.sh  agent-provenance.sh  agent-registry.sh  agent-teams.sh  agents.sh  analytics.sh  conflicts.sh  consistency.sh  domain-models.sh  events.sh  execution-history.sh  execution-plans.sh  execution-risk.sh  execution.sh  explanations.sh  fabric.sh  fuseki-local.sh  governance-dashboard.sh  governance.sh  graph.sh  import-csv.sh  import-sql.sh  inference.sh  install-base.sh  jena-check.sh  lineage.sh  load-fuseki.sh  mappings.sh  materialize.sh  named-graphs.sh  ontology-version.sh  ontology.sh  provenance-dashboard.sh  provenance.sh  query.sh  reasoning-dashboard.sh  reasoning.sh  rollback.sh  (+5 more)
tests/: README.md  test_agent_llm_assist.py  test_agent_llm_assist_ollama.py  test_authoring_assistant.py  test_authoring_gitrepo.py  test_authoring_scaffold.py  test_authoring_workspace.py  test_chat_panel.py  test_config.py  test_context_factory.py  test_context_scope.py  test_domain_models.py  test_end_to_end.py  test_end_to_end_external.py  test_external_integration_live.py  test_flask_routes.py  test_flask_skeleton.py  test_fuseki.py  test_graph.py  (+24 more)
(+353 files in other folders)
