[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-platform-template"
version = "0.1.0"
description = "Domain-neutral semantic platform skeleton for RDF, SHACL, SPARQL, Fuseki, Flask, and agent integration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.0",
  "gunicorn>=22.0",
  "python-dotenv>=1.0",
  "rdflib>=7.0",
  "pyshacl>=0.26",
  "requests>=2.32",
  "SPARQLWrapper>=2.0",
  "owlrl>=7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
# Live relational warehouse driver for the per-role sources (ADR-0017/0019). The core
# is SQLite-only by default; install this extra to read a role from Postgres (the
# bundled postgres-business/postgres-agents containers) or any SQLAlchemy-supported store.
postgres = [
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
src = ["src", "app", "tests"]
